--- a/doom/config/doomretro-custom.cfg
+++ b/doom/config/doomretro-custom.cfg
@@ -1,5 +1,5 @@
 ; CVARs
-alwaysrun off
+alwaysrun on
 am_allmapcdwallcolor 106
 am_allmapfdwallcolor 110
 am_allmapwallcolor 108
@@ -29,7 +29,7 @@ centerweapon on
 con_backcolor 12
 con_obituaries on
 con_timestamps on
-crosshair none
+crosshair cross
 crosshaircolor 4
 episode 1
 expansion 1
@@ -46,12 +46,12 @@ gp_vibrate_damage 100%
 gp_vibrate_weapons 100%
 infighting on
 infiniteheight off
-iwadfolder "C:\Users\Chris\doom\iwad"
+iwadfolder "C:\Program Files (x86)\Steam\steamapps\common\Ultimate Doom\base"
 m_acceleration on
 m_doubleclick_use off
 m_invertyaxis off
 m_novertical on
-m_sensitivity 16
+m_sensitivity 20
 messages off
 mouselook off
 movebob 75%
@@ -98,10 +98,10 @@ r_skycolor none
 r_textures on
 r_translucency on
 s_channels 32
-s_musicvolume 67%
+s_musicvolume 54%
 s_randommusic off
 s_randompitch off
-s_sfxvolume 58%
+s_sfxvolume 48%
 s_stereo on
 savegame 1
 skilllevel 4
@@ -119,7 +119,7 @@ vid_scaleapi "opengl"
 vid_scalefilter "nearest"
 vid_screenresolution desktop
 vid_vsync on
-vid_widescreen off
+vid_widescreen on
 vid_windowpos centered
 vid_windowsize 768x480
 wad "DOOM.WAD"
@@ -129,49 +129,49 @@ weaponrecoil off
 wipe on
 
 ; player stats
-stat_barrelsexploded 0
-stat_cheated 0
-stat_damageinflicted 0
-stat_damagereceived 0
+stat_barrelsexploded 79
+stat_cheated 3
+stat_damageinflicted 54,871
+stat_damagereceived 865
 stat_deaths 0
-stat_distancetraveled 840
+stat_distancetraveled 518,742
 stat_gamessaved 0
-stat_itemspickedup 0
-stat_itemspickedup_ammo_bullets 0
-stat_itemspickedup_ammo_cells 0
-stat_itemspickedup_ammo_rockets 0
-stat_itemspickedup_ammo_shells 0
-stat_itemspickedup_armor 0
-stat_itemspickedup_health 0
-stat_mapscompleted 0
-stat_monsterskilled 0
+stat_itemspickedup 300
+stat_itemspickedup_ammo_bullets 2,197
+stat_itemspickedup_ammo_cells 140
+stat_itemspickedup_ammo_rockets 92
+stat_itemspickedup_ammo_shells 1,248
+stat_itemspickedup_armor 1,516
+stat_itemspickedup_health 634
+stat_mapscompleted 7
+stat_monsterskilled 797
 stat_monsterskilled_arachnotrons 0
 stat_monsterskilled_archviles 0
 stat_monsterskilled_baronsofhell 0
 stat_monsterskilled_cacodemons 0
 stat_monsterskilled_cyberdemons 0
-stat_monsterskilled_demons 0
+stat_monsterskilled_demons 72
 stat_monsterskilled_heavyweapondudes 0
 stat_monsterskilled_hellknights 0
-stat_monsterskilled_imps 0
+stat_monsterskilled_imps 253
 stat_monsterskilled_lostsouls 0
 stat_monsterskilled_mancubi 0
 stat_monsterskilled_painelementals 0
 stat_monsterskilled_revenants 0
-stat_monsterskilled_shotgunguys 0
-stat_monsterskilled_spectres 0
+stat_monsterskilled_shotgunguys 262
+stat_monsterskilled_spectres 53
 stat_monsterskilled_spidermasterminds 0
-stat_monsterskilled_zombiemen 0
+stat_monsterskilled_zombiemen 157
 stat_runs 1
-stat_secretsrevealed 0
-stat_shotsfired 0
-stat_shotshit 0
+stat_secretsrevealed 32
+stat_shotsfired 2,395
+stat_shotshit 1,671
 stat_skilllevel_heynottoorough 0
 stat_skilllevel_hurtmeplenty 0
 stat_skilllevel_imtooyoungtodie 0
 stat_skilllevel_nightmare 0
 stat_skilllevel_ultraviolence 1
-stat_time 193
+stat_time 79,807
 
 ; bound controls
 bind capslock +alwaysrun
@@ -198,7 +198,6 @@ bind gamepad2 +nextweapon
 bind wheelup +prevweapon
 bind gamepad4 +prevweapon
 bind right +right
-bind 'r' +rotatemode
 bind shift +run
 bind lefttrigger +run
 bind printscreen +screenshot
@@ -215,9 +214,9 @@ bind '1' +weapon1
 bind '2' +weapon2
 bind '3' +weapon3
 bind '4' +weapon4
-bind '5' +weapon5
-bind '6' +weapon6
-bind '7' +weapon7
+bind 'r' +weapon5
+bind 'q' +weapon6
+bind 'b' +weapon7
 bind '+' +zoomin
 bind rightshoulder +zoomin
 bind '-' +zoomout
