New PRBoom Options for 2.5.1.5
This sets everything up the way I want it for now. Too many options
changed here to list them all.

--- a/config/glboom-plus.cfg
+++ b/config/glboom-plus.cfg
@@ -4,7 +4,6 @@
 
 # System settings
 process_priority              0
-try_to_reduce_cpu_cache_misses     1
 
 # Misc settings
 default_compatibility_level    -1
@@ -29,6 +28,7 @@ default_skill                 3
 weapon_recoil                 0
 doom_weapon_toggles           1
 player_bobbing                1
+weapon_attack_alignment       0
 monsters_remember             1
 monster_infighting            1
 monster_backing               0
@@ -41,9 +41,9 @@ variable_friction             1
 player_helpers                0
 friend_distance             128
 dog_jumping                   1
-sts_always_red                1
+sts_always_red                0
 sts_pct_always_gray           0
-sts_traditional_keys          0
+sts_traditional_keys          1
 show_messages                 1
 autorun                       1
 
@@ -102,14 +102,13 @@ mus_opl_gain                 50
 
 # Video settings
 videomode                 "OpenGL"
-use_gl_surface                0
-screen_resolution         "3840x2160"
+screen_resolution         "2560x1440"
 use_fullscreen                1
-use_doublebuffer              1
+render_vsync                  0
 translucency                  1
 tran_filter_pct              66
 screenblocks                 10
-usegamma                      3
+usegamma                      1
 uncapped_framerate            1
 test_interpolation_method     0
 filter_wall                   1
@@ -135,20 +134,19 @@ gl_ext_packed_depth_stencil     1
 gl_ext_texture_filter_anisotropic     1
 gl_use_stencil                1
 gl_use_display_lists          0
-gl_vsync                      1
 gl_finish                     1
 gl_clear                      0
 gl_ztrick                     0
 gl_nearclip                   5
 gl_colorbuffer_bits          32
 gl_depthbuffer_bits          24
-gl_texture_filter             5
-gl_sprite_filter              1
-gl_patch_filter               1
+gl_texture_filter             3
+gl_sprite_filter              0
+gl_patch_filter               0
 gl_texture_filter_anisotropic     3
 gl_tex_format_string      "GL_RGBA"
 gl_sprite_offset              0
-gl_sprite_blend               1
+gl_sprite_blend               0
 gl_mask_sprite_threshold     50
 gl_skymode                    0
 gl_sky_detail                16
@@ -157,7 +155,7 @@ gl_use_shared_texture_palette     0
 
 # Mouse settings
 use_mouse                     1
-mouse_sensitivity_horiz      10
+mouse_sensitivity_horiz      11
 mouse_sensitivity_vert        0
 mouseb_fire                   0
 mouseb_strafe                 1
@@ -178,6 +176,7 @@ key_menu_down             0xaf
 key_menu_backspace        0x7f
 key_menu_escape           0x1b
 key_menu_enter            0xd
+key_menu_clear            0xc8
 key_setup                 0x0
 key_strafeleft            0x61
 key_straferight           0x64
@@ -219,8 +218,8 @@ key_map_rotate            0x72
 key_map_overlay           0x6f
 key_map_textured          0x0
 key_reverse               0x2f
-key_zoomin                0x3d
-key_zoomout               0x2d
+key_zoomin                0xeb
+key_zoomout               0xec
 key_chatplayer1           0x67
 key_chatplayer2           0x69
 key_chatplayer3           0x37
@@ -235,8 +234,8 @@ key_weapon6               0x71
 key_weapon7               0x62
 key_weapon8               0x38
 key_weapon9               0x39
-key_nextweapon            0xeb
-key_prevweapon            0xec
+key_nextweapon            0x3d
+key_prevweapon            0x2d
 key_screenshot            0x2a
 
 # Joystick settings
@@ -328,7 +327,7 @@ armor_green                 100
 ammo_red                     25
 ammo_yellow                  50
 ammo_colour_behaviour         2
-hud_num                       6
+hud_num                       9
 hud_displayed                 0
 
 # Prboom-plus key bindings
@@ -372,7 +371,6 @@ demo_overwriteexisting        1
 
 # Prboom-plus game settings
 movement_strafe50             0
-movement_strafe50onturns      0
 movement_shorttics            0
 interpolation_maxobjects      0
 
@@ -387,25 +385,24 @@ health_bar_green              0
 
 # Video capture encoding settings
 cap_soundcommand          "oggenc2 -r -R %s -q 5 - -o output.ogg"
-cap_videocommand          "x264 -o output.mp4 --crf 22 --muxer mp4 --demuxer raw --input-csp rgb --input-depth 8 --input-res %wx%h --fps 35 -"
+cap_videocommand          "x264 -o output.mp4 --crf 18 --muxer mp4 --demuxer raw --input-csp rgb --input-depth 8 --input-res %wx%h --fps %r -"
 cap_muxcommand            "mkvmerge -o %f output.mp4 output.ogg"
 cap_tempfile1             "output.ogg"
 cap_tempfile2             "output.mp4"
 cap_remove_tempfiles          1
+cap_fps                      60
 
 # Prboom-plus video settings
-sdl_videodriver           "default"
 sdl_video_window_pos      "center"
 palette_ondamage              1
 palette_onbonus               1
 palette_onpowers              1
 render_wipescreen             1
 render_screen_multiply        1
-render_interlaced_scanning     0
 render_aspect                 0
 render_doom_lightmaps         0
 fake_contrast                 1
-render_stretch_hud            0
+render_stretch_hud            2
 render_patches_scalex         0
 render_patches_scaley         0
 render_stretchsky             1
