Config for GLBoom 2.5.1.5

--- a/config/glboom-plus.cfg
+++ b/config/glboom-plus.cfg
@@ -88,7 +88,7 @@ music_card                   -1
 pitched_sounds                0
 samplerate                22050
 sfx_volume                    8
-music_volume                  8
+music_volume                 11
 mus_pause_opt                 1
 snd_channels                 32
 snd_midiplayer            "fluidsynth"
@@ -143,7 +143,7 @@ gl_depthbuffer_bits          24
 gl_texture_filter             3
 gl_sprite_filter              0
 gl_patch_filter               0
-gl_texture_filter_anisotropic     3
+gl_texture_filter_anisotropic     0
 gl_tex_format_string      "GL_RGBA"
 gl_sprite_offset              0
 gl_sprite_blend               0
@@ -155,17 +155,17 @@ gl_use_shared_texture_palette     0
 
 # Mouse settings
 use_mouse                     1
-mouse_sensitivity_horiz      11
+mouse_sensitivity_horiz       7
 mouse_sensitivity_vert        0
 mouseb_fire                   0
 mouseb_strafe                 1
-mouseb_forward                2
+mouseb_forward               -1
 mouseb_backward              -1
-mouseb_use                   -1
+mouseb_use                    2
 
 # Key bindings
-key_right                 0xae
-key_left                  0xac
+key_right                 0xec
+key_left                  0xc8
 key_up                    0x77
 key_down                  0x73
 key_mlook                 0x5c
@@ -218,8 +218,8 @@ key_map_rotate            0x72
 key_map_overlay           0x6f
 key_map_textured          0x0
 key_reverse               0x2f
-key_zoomin                0xeb
-key_zoomout               0xec
+key_zoomin                0x12b
+key_zoomout               0x12d
 key_chatplayer1           0x67
 key_chatplayer2           0x69
 key_chatplayer3           0x37
@@ -327,12 +327,12 @@ armor_green                 100
 ammo_red                     25
 ammo_yellow                  50
 ammo_colour_behaviour         2
-hud_num                       9
+hud_num                       2
 hud_displayed                 0
 
 # Prboom-plus key bindings
-key_speedup               0x12b
-key_speeddown             0x12d
+key_speedup               0xad
+key_speeddown             0xaf
 key_speeddefault          0x12a
 speed_step                    0
 key_demo_skip             0xd2
@@ -350,11 +350,11 @@ hudadd_demotime               0
 hudadd_secretarea             1
 hudadd_smarttotals            1
 hudadd_demoprogressbar        1
-hudadd_crosshair              1
+hudadd_crosshair              0
 hudadd_crosshair_scale        1
 hudadd_crosshair_color        3
 hudadd_crosshair_health       1
-hudadd_crosshair_target       1
+hudadd_crosshair_target       0
 hudadd_crosshair_target_color     9
 hudadd_crosshair_lock_target     0
 
